Adjusted styles of modals, added script to replace download button in api documentation

--- a/page--front.html.twig
+++ b/page--front.html.twig
@@ -155,38 +155,38 @@
           <div class="container-medium client-path">
               <img src="{{ base_path ~ directory }}/images/triangle.svg" alt="triangle" class="client-path-triangle">
               <div class="client-path-steps upper-steps-div">
-                  <div class="client-path-steps-item client-path-steps-item-1">
+                  <a href="/vtb/test/user/register" class="client-path-steps-item client-path-steps-item-1">
                       <img src="{{ base_path ~ directory }}/images/step-1.png" alt="step 1" class="step-number-img step-number-img-first">
                       <div class="client-path-steps-item-number">
                           <p>/* step</p>
                           <p>01</p>
                       </div>
                       <h4>Зарегистрироваться на портале разработчиков developer.vtb.ru</h4>
-                  </div>
-                  <div class="client-path-steps-item client-path-steps-item-2">
+                  </a>
+                  <a href="/vtb/test/product" class="client-path-steps-item client-path-steps-item-2">
                       <img src="{{ base_path ~ directory }}/images/step-2.png" alt="step 2" class="step-number-img">
                       <div class="client-path-steps-item-number">
                           <p>/* step</p>
                           <p>02</p>
                       </div>
-                      <h4>Найти и протестировать нужные API</h4>
-                  </div>
-                  <div class="client-path-steps-item client-path-steps-item-3">
+                      <h4>Найти нужные API в каталоге и протестировать их</h4>
+                  </a>
+                  <a href="mailto:developer@vtb.ru?subject=Заключение партнерского договора на использование API" class="client-path-steps-item client-path-steps-item-3">
                       <img src="{{ base_path ~ directory }}/images/step-3.png" alt="step 3" class="step-number-img">
                       <div class="client-path-steps-item-number">
                           <p>/* step</p>
                           <p>03</p>
                       </div>
-                      <h4>Заключить договор на информационное взаимодействие</h4>
-                  </div>
-                  <div class="client-path-steps-item client-path-steps-item-4">
+                      <h4>Заключить партнерский договор</h4>
+                  </a>
+                  <a href="/vtb/test/application" class="client-path-steps-item client-path-steps-item-4">
                       <img src="{{ base_path ~ directory }}/images/step-4.png" alt="step 4" class="step-number-img">
                       <div class="client-path-steps-item-number">
                           <p>/* step</p>
                           <p>04</p>
                       </div>
                       <h4>Использовать API в своих разработках</h4>
-                  </div>
+                  </a>
               </div>
               <div class="client-path-timeline">
                   <div class="client-path-timeline-wrapper">
