--- a/scss/_client-path.scss
+++ b/scss/_client-path.scss
@@ -54,7 +54,7 @@ $fourth-step-indent: 51.625rem;
 
     &-item {
         max-width: 11rem;
-
+        display: block;
         position: absolute;
         cursor: pointer;
 
