--- a/scss/_suppliers.scss
+++ b/scss/_suppliers.scss
@@ -94,7 +94,7 @@
         width: 30.5rem;
         display: flex;
         flex-direction: column;
-        color: #7B7E86;
+        color: $color-neutral-50;
 
         label {
             font-size: .875rem;
