--- a/scss/_catalog.scss
+++ b/scss/_catalog.scss
@@ -41,7 +41,7 @@
             margin-bottom: 2.5rem;
     
             &-public {
-                color: #7B7E86;
+                color: $color-neutral-50;
             }
         }
     }
