--- a/scss/_drupal-override-general.scss
+++ b/scss/_drupal-override-general.scss
@@ -38,10 +38,10 @@ a:focus {
 .route-apic-appcreate .main-container .row, .route-apic-appcreate-step-two .main-container .row, .route-applicationcreate .main-container .row, .route-applicationcreate-step-two .main-container .row, .route-apic-appverify-clientsecret .main-container .row, .route-apic-appcredentials-create .main-container .row, .route-apic-appreset-clientid .main-container .row, .route-apic-appreset-clientsecret .main-container .row, .route-apic-appcredentials-update .main-container .row, .route-apic-appcredentials-delete .main-container .row, .route-apic-appupdate .main-container .row, .route-apic-appdelete .main-container .row, .route-apic-apppromote .main-container .row, .route-apic-appimage-upload .main-container .row, .route-apic-appimage-delete .main-container .row, .route-consumerorgcreate .main-container .row, .route-consumerorgupdate .main-container .row, .route-consumerorgdelete .main-container .row, .route-consumerorgchangeowner .main-container .row, .route-consumerorginvite .main-container .row, .route-consumerorgremove-user .main-container .row, .route-consumerorgresend-invite .main-container .row, .route-change-pwd-pagechange-password-form .main-container .row .apic-change-pwd-form, .route-entityuseredit-form .main-container .row .user-form, .route-ibm-apimsubscription-wizardnoplan .modal-dialog .form-item input, form.user-pass-reset, .apicForm, .apic-user-form {
   background-color: $color-neutral-90;
   border: 0;
-  // border: 1px solid #505258;
   border-radius: 8px;
+  padding: 1.25rem 1.5rem;
 
-  // Автрматическое заполнение инпутов / селектов и тд
+  // Автоматическое заполнение инпутов / селектов и тд
   &:-webkit-autofill, &:-webkit-autofill:hover, &:-webkit-autofill:focus, &:-webkit-autofill, &:-webkit-autofill:hover, &:-webkit-autofill:focus, &:-webkit-autofill, &:-webkit-autofill:hover, &:-webkit-autofill:focus {
       border: 1px solid #505258;
       box-sizing: border-box;
@@ -50,11 +50,16 @@ a:focus {
   }
 }
 
+.form-required::after {
+  display: none;
+}
+
 .route-apic-appcreate .main-container .row .form-item input, .route-apic-appcreate-step-two .main-container .row .form-item input, .route-applicationcreate .main-container .row .form-item input, .route-applicationcreate-step-two .main-container .row .form-item input, .route-apic-appverify-clientsecret .main-container .row .form-item input, .route-apic-appcredentials-create .main-container .row .form-item input, .route-apic-appreset-clientid .main-container .row .form-item input, .route-apic-appreset-clientsecret .main-container .row .form-item input, .route-apic-appcredentials-update .main-container .row .form-item input, .route-apic-appcredentials-delete .main-container .row .form-item input, .route-apic-appupdate .main-container .row .form-item input, .route-apic-appdelete .main-container .row .form-item input, .route-apic-apppromote .main-container .row .form-item input, .route-apic-appimage-upload .main-container .row .form-item input, .route-apic-appimage-delete .main-container .row .form-item input, .route-consumerorgcreate .main-container .row .form-item input, .route-consumerorgupdate .main-container .row .form-item input, .route-consumerorgdelete .main-container .row .form-item input, .route-consumerorgchangeowner .main-container .row .form-item input, .route-consumerorginvite .main-container .row .form-item input, .route-consumerorgremove-user .main-container .row .form-item input, .route-consumerorgresend-invite .main-container .row .form-item input, .route-change-pwd-pagechange-password-form .main-container .row .apic-change-pwd-form .form-item input, .route-entityuseredit-form .main-container .row .user-form .form-item input, .route-ibm-apimsubscription-wizardnoplan .modal-dialog .form-item input .form-item input, form.user-pass-reset .form-item input, .apicForm .form-item input, .apic-user-form .form-item input, .route-apic-appcreate .main-container .row .form-item input:hover, .route-apic-appcreate-step-two .main-container .row .form-item input:hover, .route-applicationcreate .main-container .row .form-item input:hover, .route-applicationcreate-step-two .main-container .row .form-item input:hover, .route-apic-appverify-clientsecret .main-container .row .form-item input:hover, .route-apic-appcredentials-create .main-container .row .form-item input:hover, .route-apic-appreset-clientid .main-container .row .form-item input:hover, .route-apic-appreset-clientsecret .main-container .row .form-item input:hover, .route-apic-appcredentials-update .main-container .row .form-item input:hover, .route-apic-appcredentials-delete .main-container .row .form-item input:hover, .route-apic-appupdate .main-container .row .form-item input:hover, .route-apic-appdelete .main-container .row .form-item input:hover, .route-apic-apppromote .main-container .row .form-item input:hover, .route-apic-appimage-upload .main-container .row .form-item input:hover, .route-apic-appimage-delete .main-container .row .form-item input:hover, .route-consumerorgcreate .main-container .row .form-item input:hover, .route-consumerorgupdate .main-container .row .form-item input:hover, .route-consumerorgdelete .main-container .row .form-item input:hover, .route-consumerorgchangeowner .main-container .row .form-item input:hover, .route-consumerorginvite .main-container .row .form-item input:hover, .route-consumerorgremove-user .main-container .row .form-item input:hover, .route-consumerorgresend-invite .main-container .row .form-item input:hover, .route-change-pwd-pagechange-password-form .main-container .row .apic-change-pwd-form .form-item input:hover, .route-entityuseredit-form .main-container .row .user-form .form-item input:hover, .route-ibm-apimsubscription-wizardnoplan .modal-dialog .form-item input .form-item input:hover, form.user-pass-reset .form-item input:hover, .apicForm .form-item input:hover, .apic-user-form .form-item input:hover, .route-apic-appcreate .main-container .row .form-item textarea, .route-apic-appcreate-step-two .main-container .row .form-item textarea, .route-applicationcreate .main-container .row .form-item textarea, .route-applicationcreate-step-two .main-container .row .form-item textarea, .route-apic-appverify-clientsecret .main-container .row .form-item textarea, .route-apic-appcredentials-create .main-container .row .form-item textarea, .route-apic-appreset-clientid .main-container .row .form-item textarea, .route-apic-appreset-clientsecret .main-container .row .form-item textarea, .route-apic-appcredentials-update .main-container .row .form-item textarea, .route-apic-appcredentials-delete .main-container .row .form-item textarea, .route-apic-appupdate .main-container .row .form-item textarea, .route-apic-appdelete .main-container .row .form-item textarea, .route-apic-apppromote .main-container .row .form-item textarea, .route-apic-appimage-upload .main-container .row .form-item textarea, .route-apic-appimage-delete .main-container .row .form-item textarea, .route-consumerorgcreate .main-container .row .form-item textarea, .route-consumerorgupdate .main-container .row .form-item textarea, .route-consumerorgdelete .main-container .row .form-item textarea, .route-consumerorgchangeowner .main-container .row .form-item textarea, .route-consumerorginvite .main-container .row .form-item textarea, .route-consumerorgremove-user .main-container .row .form-item textarea, .route-consumerorgresend-invite .main-container .row .form-item textarea, .route-change-pwd-pagechange-password-form .main-container .row .apic-change-pwd-form .form-item textarea, .route-entityuseredit-form .main-container .row .user-form .form-item textarea, .route-ibm-apimsubscription-wizardnoplan .modal-dialog .form-item input .form-item textarea, form.user-pass-reset .form-item textarea, .apicForm .form-item textarea, .apic-user-form .form-item textarea, .route-apic-appcreate .main-container .row .form-item select, .route-apic-appcreate-step-two .main-container .row .form-item select, .route-applicationcreate .main-container .row .form-item select, .route-applicationcreate-step-two .main-container .row .form-item select, .route-apic-appverify-clientsecret .main-container .row .form-item select, .route-apic-appcredentials-create .main-container .row .form-item select, .route-apic-appreset-clientid .main-container .row .form-item select, .route-apic-appreset-clientsecret .main-container .row .form-item select, .route-apic-appcredentials-update .main-container .row .form-item select, .route-apic-appcredentials-delete .main-container .row .form-item select, .route-apic-appupdate .main-container .row .form-item select, .route-apic-appdelete .main-container .row .form-item select, .route-apic-apppromote .main-container .row .form-item select, .route-apic-appimage-upload .main-container .row .form-item select, .route-apic-appimage-delete .main-container .row .form-item select, .route-consumerorgcreate .main-container .row .form-item select, .route-consumerorgupdate .main-container .row .form-item select, .route-consumerorgdelete .main-container .row .form-item select, .route-consumerorgchangeowner .main-container .row .form-item select, .route-consumerorginvite .main-container .row .form-item select, .route-consumerorgremove-user .main-container .row .form-item select, .route-consumerorgresend-invite .main-container .row .form-item select, .route-change-pwd-pagechange-password-form .main-container .row .apic-change-pwd-form .form-item select, .route-entityuseredit-form .main-container .row .user-form .form-item select, .route-ibm-apimsubscription-wizardnoplan .modal-dialog .form-item input .form-item select, form.user-pass-reset .form-item select, .apicForm .form-item select, .apic-user-form .form-item select {
   background-color: transparent;
   color: #E5E7EB;
   border: 1px solid #505258;
   border-radius: 4px;
+  max-width: 40rem;
 }
 
 .bx--global-light-ui .form-item input, .bx--global-light-ui .form-item input:hover, .bx--global-light-ui .form-item input:focus {
@@ -185,7 +190,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
   box-shadow: none;
 
   li {
-      padding: .75rem 0;
+      margin-bottom: .75rem;
       &:last-child {
           padding-bottom: 0;
       }
@@ -588,7 +593,9 @@ select.simpler-select.form-select {
   background-color: $color-primary-60;
   font-family: $main-font;
   height: auto;
-  padding: .625rem 1.5rem; 
+  max-height: 2.5rem;
+  padding: .625rem 1.5rem;
+  margin: 0 0 0 1rem;
 
   border-radius: 4px;
   border: none;
@@ -655,6 +662,7 @@ button#edit-reset {
   border-radius: 4px !important;
   color: inherit;
   padding: 10px 24px;
+  margin: 0;
 
   display: flex;
   align-items: center;
