Added styling for questions page, added scripts to insert svg's and changed structure of scripts.js

--- a/scss/_connection.scss
+++ b/scss/_connection.scss
@@ -41,7 +41,7 @@
 
     &-title {
         display: flex;
-        align-items:baseline;
+        align-items: center;
         &-icon {
             display: flex;
             align-items: center;
@@ -115,11 +115,5 @@
 
     .connection-section {
         flex-direction: column;
-
-        &-title {
-            h3 {
-                margin-left: 0;
-            }
-        }
     }
 }
