--- a/scss/_drupal-override-organisation.scss
+++ b/scss/_drupal-override-organisation.scss
@@ -36,6 +36,15 @@ h1.orgName {
   display: none;
 }
 
+// Блок владельца и участника
+.apicMyOrgMemberDetails .orgApicUser {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr;
+  width: auto;
+  max-width: 65rem;
+}
+
 // Меню для редактирования организация (справа от имени владельца)
 .apicMyOrgActions .organizationMenu .dropit-trigger a.trigger {
   width: 3rem;
@@ -68,7 +77,7 @@ h1.orgName {
 // Раздел "Участники"
 @media (max-width: 767px) {
   .apicMyOrg .field.organizationMembers .memberHeader {
-    margin: 1rem;
+    margin: 2.5rem 0 .7rem;
   }
 }
 @media (max-width: 424px) {
@@ -131,8 +140,8 @@ h1.orgName {
   border-collapse: separate;
   border-spacing: 0 .75rem !important;
 
-  & thead {
-    background: inherit;
+  thead {
+    display: none;
   }
 }
 @media (max-width: 767px) {
@@ -176,7 +185,8 @@ h1.orgName {
   margin-top: 15px;
 }
 
-// Галочка роли участника
+// Роль участника
+// [a^=”1”]
 .apicMyOrg .apicMyOrgMembers polygon {
   fill: $color-primary-50;
 }
