--- a/scss/_drupal-override-product.scss
+++ b/scss/_drupal-override-product.scss
@@ -43,8 +43,16 @@
 }
 
 // Название карточки
+.bx--card .apicProductCardMain {
+  width: 100%;
+  .apicProductName {
+    max-width: 100%;
+  }
+}
+
+// Заголовок карточки АПИ
 .bx--card .apicProductCardMain .bx--about__title--name {
-  width: auto;
+  width: 100%;
   height: auto;
 }
 
@@ -59,9 +67,6 @@
   width: 100%;
 }
 
-.bx--card .apicProductCardMain .apicProductName {
-  max-width: 100%;
-}
 
 .apicProductCardVersionAndRating {
   display: flex;
