--- a/scss/_drupal-override-app-page.scss
+++ b/scss/_drupal-override-app-page.scss
@@ -53,9 +53,9 @@
 }
 
 // Добавление новых идентификационных данных
-.bx--global-light-ui .form-item {
-    // margin: 1rem 0 .5rem;
-}
+// .bx--global-light-ui .form-item {
+//     margin: 1rem 0 .5rem;
+// }
 @media (max-width: 767px) {
   .route-apic-appcredentials-create .main-container .row {
     padding: 2rem 1rem;
