--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -4,8 +4,10 @@ $main-font: "VTB Group UI";
 $color-neutral-05: #F3F4F6;
 $color-neutral-10: #E5E7EB;
 $color-neutral-30: #B1B5BB;
+$color-neutral-40: #9A9EA5;
 $color-neutral-50: #7B7E86;
 $color-neutral-70:#505258;
+$color-neutral-80:#37383C;
 $color-neutral-90: #22242A;
 $color-light-grey-bg: #2D2F35;
 $color-coldgrey-50: #7E8390;
