--- a/scss/_drupal-override-general.scss
+++ b/scss/_drupal-override-general.scss
@@ -88,8 +88,9 @@ a:focus {
 
   border: 1px solid #505258;
   box-sizing: border-box;
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
+  // border-bottom-left-radius: 4px;
+  // border-top-left-radius: 4px;
+  border-radius: 4px;
   background-color: transparent;
 
   // &:only-child {
@@ -197,12 +198,15 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 
   li {
       margin-bottom: .75rem;
+      &:first-child {
+        padding-top: 0;
+      }
       &:last-child {
-          padding-bottom: 0;
+        padding-bottom: 0;
       }
 
       a {
-          color: $color-primary-50;
+        color: $color-primary-50;
       }
   }
 }
@@ -239,11 +243,10 @@ li.selectorg {
 .region-content {
   background-color: inherit;
 }
-@media (max-width: 767px) {
-  // .region-content {
-      // padding-right: 1rem;
-      // padding-left: 1rem;
-  // }
+@media (max-width: 1220px) {
+  .region-content {
+    padding: 0 1rem;
+  }
 }
 
 .apic-user-form {
@@ -471,9 +474,9 @@ li.dropit-trigger a {
 
 // МНОГО ЧЕГО, включая блок редактирования в ЛК
 
-.route-apic-appcreate .main-container .row, .route-apic-appcreate-step-two .main-container .row, .route-applicationcreate .main-container .row, .route-applicationcreate-step-two .main-container .row, .route-apic-appverify-clientsecret .main-container .row, .route-apic-appcredentials-create .main-container .row, .route-apic-appreset-clientid .main-container .row, .route-apic-appreset-clientsecret .main-container .row, .route-apic-appcredentials-update .main-container .row, .route-apic-appcredentials-delete .main-container .row, .route-apic-appupdate .main-container .row, .route-apic-appdelete .main-container .row, .route-apic-apppromote .main-container .row, .route-apic-appimage-upload .main-container .row, .route-apic-appimage-delete .main-container .row, .route-consumerorgcreate .main-container .row, .route-consumerorgupdate .main-container .row, .route-consumerorgdelete .main-container .row, .route-consumerorgchangeowner .main-container .row, .route-consumerorginvite .main-container .row, .route-consumerorgremove-user .main-container .row, .route-consumerorgresend-invite .main-container .row, .route-change-pwd-pagechange-password-form .main-container .row .apic-change-pwd-form, .route-entityuseredit-form .main-container .row .user-form, .route-ibm-apimsubscription-wizardnoplan .modal-dialog .form-item input, form.user-pass-reset, .apicForm, .apic-user-form {
-  // background-color: inherit;
-}
+// .route-apic-appcreate .main-container .row, .route-apic-appcreate-step-two .main-container .row, .route-applicationcreate .main-container .row, .route-applicationcreate-step-two .main-container .row, .route-apic-appverify-clientsecret .main-container .row, .route-apic-appcredentials-create .main-container .row, .route-apic-appreset-clientid .main-container .row, .route-apic-appreset-clientsecret .main-container .row, .route-apic-appcredentials-update .main-container .row, .route-apic-appcredentials-delete .main-container .row, .route-apic-appupdate .main-container .row, .route-apic-appdelete .main-container .row, .route-apic-apppromote .main-container .row, .route-apic-appimage-upload .main-container .row, .route-apic-appimage-delete .main-container .row, .route-consumerorgcreate .main-container .row, .route-consumerorgupdate .main-container .row, .route-consumerorgdelete .main-container .row, .route-consumerorgchangeowner .main-container .row, .route-consumerorginvite .main-container .row, .route-consumerorgremove-user .main-container .row, .route-consumerorgresend-invite .main-container .row, .route-change-pwd-pagechange-password-form .main-container .row .apic-change-pwd-form, .route-entityuseredit-form .main-container .row .user-form, .route-ibm-apimsubscription-wizardnoplan .modal-dialog .form-item input, form.user-pass-reset, .apicForm, .apic-user-form {
+//   background-color: inherit;
+// }
 
 
 
@@ -544,6 +547,13 @@ select, .select-wrapper select, .bx--select-input {
   color: $color-neutral-50;
   border: 1px solid #505258;
   border-radius: 4px;
+  height: auto;
+  padding: .5rem 3rem .5rem 1rem;
+  box-shadow: none;
+}
+// Стрелка внутри селекта
+.bx--select__arrow {
+  height: .7rem;
 }
 // Селект "Тип"
 select#edit-application-lifecycle-state-value {
@@ -601,7 +611,7 @@ select.simpler-select.form-select {
   height: auto;
   max-height: 2.5rem;
   padding: .625rem 1.5rem;
-  margin: 0 0 0 1rem;
+  margin: 0;
 
   border-radius: 4px;
   border: none;
@@ -623,6 +633,10 @@ select.simpler-select.form-select {
 // Иконка конверта в кнопке
 span.icon.glyphicon.glyphicon-envelope {
   display: none;
+}
+
+.form-group.form-actions {
+  margin: 2.5rem 0 0;
 }
 
 .bx--global-light-ui .view-filters.form-group .form-actions {
