--- a/scss/_drupal-override-header.scss
+++ b/scss/_drupal-override-header.scss
@@ -37,7 +37,7 @@ li.dropit-trigger a {
   margin-left: .625rem;
 }
 // Меню выбора организации
-.consumerorgSelectBlock .orgmenu .dropit-trigger a {
+.consumerorgSelectBlock .orgmenu .dropit-trigger > a {
   display: flex;
   flex-direction: row-reverse;
 
@@ -56,6 +56,7 @@ li.dropit-trigger a {
       color: #fff;
       font-weight: normal;
       font-size: .75rem;
+      line-height: normal;
     }
   }
 }
@@ -65,6 +66,10 @@ li.dropit-trigger a {
   .dropitmenu-submenu li {
     &:last-child {
       border-top: 1px solid $color-neutral-70;
+    }
+    &:only-child {
+      border: none;
+      padding: 0;
     }
   }
   .trigger .dropit-icon {
