--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -66,7 +66,7 @@
                 font-size: .875rem;
                 font-weight: 600;
 
-                &:hover {
+                &:hover, &-active {
                     text-decoration-line: underline;
                     text-underline-offset: 5px;
                 }
