--- a/scss/_drupal-override-organisation.scss
+++ b/scss/_drupal-override-organisation.scss
@@ -14,7 +14,7 @@
 // Владелец организации
 .apicMyOrgOwner {
   background: #2D2F35;
-  padding: .625rem 1rem;
+  padding: 1.25rem;
   border: none;
   border-radius: 8px;
   margin: .8rem 0;
@@ -37,10 +37,10 @@ h1.orgName {
 }
 
 // Блок владельца и участника
-.apicMyOrgMemberDetails .orgApicUser {
+.apicMyOrgOwner .apicMyOrgMemberDetails .orgApicUser {
   display: grid;
-  grid-gap: 10px;
-  grid-template-columns: 20rem 20rem;
+  grid-gap: 5px;
+  grid-template-columns: 2.05fr 3.75fr 1fr;
   width: auto;
   max-width: 65rem;
 }
@@ -157,6 +157,9 @@ h1.orgName {
 .apicMyOrg .apicMyOrgMembers tbody tr.member-even,
 .apicMyOrg .apicMyOrgMembers tbody tr.member-odd {
   background-color: #2D2F35;
+}
+.apicMyOrg .apicMyOrgMembers tbody td {
+  text-align: left;
 }
 .apicMyOrg .apicMyOrgMembers th:first-child, .apicMyOrg .apicMyOrgMembers tbody td:first-child {
   border-bottom-left-radius: 8px;
